# sources

./: index.json  index.min.json
.github/workflows/: build.yaml
sources/: en.aquamanga-v2.aix  en.armageddon-v5.aix  en.asurascans-v17.aix  en.athreascans-v1.aix  en.batcave-v1.aix  en.comix-v25.aix  en.drakescans-v1.aix  en.elftoon-v2.aix  en.ezmanga-v1.aix  en.firescans-v2.aix  en.flamecomics-v4.aix  en.freewebnovel-v2.aix  en.hivescans-v1.aix  en.madokami-v1.aix  en.magusmanga-v1.aix  en.mangabat-v9.aix  en.mangademon-v7.aix  en.mangadistrict-v1.aix  en.mangago-v3.aix  en.mangakakalot-v4.aix  en.manganato-v8.aix  en.manganelo-v4.aix  en.mangareadorg-v2.aix  en.mangasect-v1.aix  en.mangatx-v10.aix  en.manhuagold-v1.aix  en.manhuaplusorg-v1.aix  en.manhwax-v5.aix  en.novelbuddy-v2.aix  en.nyxscans-v1.aix  en.qiscans-v1.aix  en.readcomiconline-v2.aix  en.rizzfables-v2.aix  en.tcbscans-v6.aix  en.toonily-v10.aix  en.toonilyme-v1.aix  en.vortexscans-v1.aix  en.webtoonxyz-v2.aix  en.weebcentral-v6.aix  es.catharsisworld-v1.aix  (+76 more)
sources/en.aquamanga/res/: source.json
sources/en.aquamanga/src/: lib.rs
sources/en.asurascans/res/: source.json
sources/en.asurascans/src/: lib.rs
sources/en.comix/: Cargo.toml
sources/en.comix/res/: source.json
sources/en.comix/src/: descramble.rs  helpers.rs  lib.rs  models.rs  settings.rs  web.rs
sources/en.ezmanga/: Cargo.toml
sources/en.ezmanga/res/: filters.json  source.json
sources/en.ezmanga/src/: helpers.rs  lib.rs  models.rs
sources/multi.mangadex/res/: source.json
sources/multi.mangadex/src/: home.rs  lib.rs
(+12 files in other folders)
