[package]
name = "ezmanga"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", package = "aidoku", features = ["json"], version = "0.3.0" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
